welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:4: error: ')' expected but 'for' found.
	for (i<-0 to nums.length-1) {
        ^